--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:name=".WebviewActivity"
             android:label="@string/title_activity_webview"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".WebViewActivityShopping"
+            android:label="WebViewActivityShopping"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
